# sleeptimer

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac
m4/: ChangeLog
man/: Makefile.am  halttimer.1  help2man.include  inc.h2m
po/: ChangeLog  Makevars  POTFILES.in
scripts/: halttimer-action  sleeptimer-signal
src/: Makefile.am  halttimer.c  sleeptimer.c
